RESOLVED FIXED151451
FTL->B3 lowering should support checked int math
https://bugs.webkit.org/show_bug.cgi?id=151451
Summary FTL->B3 lowering should support checked int math
Filip Pizlo
Reported 2015-11-19 11:41:11 PST
Patch forthcoming.
Attachments
the patch (15.42 KB, patch)
2015-11-19 11:43 PST, Filip Pizlo
saam: review+
Filip Pizlo
Comment 1 2015-11-19 11:43:28 PST
Created attachment 265875 [details] the patch
WebKit Commit Bot
Comment 2 2015-11-19 11:46:08 PST
Attachment 265875 [details] did not pass style-queue: ERROR: Source/JavaScriptCore/ftl/FTLLowerDFGToLLVM.cpp:9113: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Saam Barati
Comment 3 2015-11-19 12:00:54 PST
Comment on attachment 265875 [details] the patch r=me
Filip Pizlo
Comment 4 2015-11-19 12:03:40 PST
Note You need to log in before you can comment on or make changes to this bug.